assets/css/style.css
/* ... */
.form-row {
    margin: .8rem 0
}

.nav-tabs .nav-link.active {
    color: #495057;
    background-color: #ecf0f5;
    border-color: #dee2e6 #dee2e6 #ecf0f5
}

.card {
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.10), 2px 2px 16px rgba(0, 0, 0, 0.10)
}

.card-header {
    padding: .65rem 1rem
}

.card-body {
    padding: 1rem .8rem .4rem
}

.os-col {
    margin-top: .3rem
}

.btn {
    padding: .08rem 1.5rem
}

.order-btn {
    padding: .4rem 2rem
}

.dd-text {
    margin-bottom: .5rem;
    color: #1c2f6abf
}

.no-dd {
    margin-bottom: .5rem;
    visibility: hidden
}

.form-control:focus {
    color: #495057;
    background-color: #fff;
    border-color: #80bdffb8;
    outline: 0;
    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, 0.07)
}

.value {
    display: inline;
    margin-bottom: .4rem
}

.price {
    color: #000000a1;
    text-align: center;
    font-style: italic
}

.obj-card {
    padding: 0 0 .1rem;
    margin: 0 .2rem 1.6rem;
    border: 1px solid #4562684d;
    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.15), 3px 3px 12px rgba(0, 0, 0, 0.20);
    transition: .5s ease-in-out
}

.obj-card:hover {
    padding: 0 0 .1rem;
    margin: 0 .2rem 1.6rem;
    border: 1px solid rgba(36, 36, 36, 0.25)
}

.footer-row {
    margin-top: 1rem;
    text-align: center
}

.footer-text {
    color: #525252c9;
    font-size: .85rem
}

.footer-text:hover {
    color: #5d8ecb;
    text-decoration: none
}

.special-card {
    border-left: 1px solid #eab22d59
}

.form-or {
    margin: 1rem 0;
    text-align: center
}

.hostname-header {
    font-size: 1.1rem;
    margin-bottom: 0;
    text-align: center
}

.m-desc {
    color: #000000a1;
    margin-bottom: .4rem;
    display: inline
}

.m-value {
    display: inline;
    margin-bottom: .4rem
}

.m-row {
    margin-bottom: .2rem
}

.m-section-row {
    margin-top: .6rem
}

.m-section-text {
    color: #5e66b5;
    font-weight: 500;
    margin: .4rem 0;
    font-size: 1.1rem
}

.object-count {
    color: #00000061;
    font-size: .9rem;
    margin-left: 1.2rem
}

.card-section-header {
    color: #4f4f64;
    letter-spacing: .05rem;
    margin-bottom: 1.2rem;
    padding-left: 1rem
}

.modal-header {
    text-align: center
}

.info-desc {
    color: #000000a1;
    margin-bottom: .4rem;
    display: inline
}

.info-val {
    color: #000000d1
}

.info-row {
    margin-bottom: .6rem
}

.collapse:not(.show) {
    display: none
}

.collapse {
    margin: .2rem 0
}

.collapse-btn {
    padding: .2rem .6rem;
    margin: .5rem 0
}

.table-val-type {
    color: #000000d1;
    font-size: 80%;
    margin-left: .05rem
}

.data-type {
    color: #212529b3;
    padding-left: .05rem;
    font-size: 85%
}

.location {
    margin-bottom: .4rem
}

.mem-disk-row, .cpu-row {
    text-align: center;
    margin-bottom: .6rem
}

.modal-header {
    padding: .8rem;
    background-color: #2d446708
}

.form-check {
    position: relative;
    display: block;
    padding-left: 1.25rem;
    margin-top: .3rem
}

.fas {
    font-weight: 900;
    color: #00000096
}

.tab-pane {
    margin-top: .8rem
}

.input-group-text {
    color: #2d3032;
    background-color: #dbe4ee;
    border: 1px solid #8598ac2b
}

.nav-tabs .nav-link.active {
    color: #494f55;
    background-color: #ecf0f5;
    border-color: #b6b7b7 #dee2e6 #76787b;
    transition: .3s ease-in-out
}

.nav-tabs .nav-link {
    color: #4077b2
}

.btn-main {
    color: #f7f7f7;
    background-color: #5a95f5;
    border-color: #3a73cf
}

.btn-main:hover, .btn-main:focus, .btn-main:active {
    color: #f7f7f7;
    background-color: #4984e3;
    border-color: #3a73cf
}

.btn-main:active, .btn-second:active, .btn-third:active {
    background-image: none
}

.btn-second {
    color: #f7f7f7;
    background-color: #30cfc0;
    border-color: #2ea69a
}

.btn-second:hover, .btn-second:focus, .btn-second:active {
    color: #f7f7f7;
    background-color: #26bdae;
    border-color: #2ea69a
}

.btn-third {
    color: #f7f7f7;
    background-color: #f06f6f;
    border-color: #df4b4b;
}

.btn-third:hover, .btn-third:focus, .btn-third:active {
    color: #f7f7f7;
    background-color: #d05555;
    border-color: #a62e2e;
}

.view-yabs-btn {
    margin-bottom: 1rem
}

.tags-list {
    color: #4f8665;
    list-style: none
}

.tags-list::before {
    display: inline-block;
    width: 1em;
    margin-left: -1em;
    content: "#"
}

.bootstrap-tagsinput {
    background-color: #fff;
    border: 1px solid #ccc;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    display: inline-block;
    padding: .6rem .2rem;
    color: #555;
    vertical-align: middle;
    border-radius: 4px;
    max-width: 100%;
    line-height: 22px;
    cursor: text
}

.bootstrap-tagsinput input {
    border: 0;
    box-shadow: none;
    outline: 0;
    background-color: transparent;
    padding: 0 6px;
    margin: 0;
    width: auto;
    max-width: inherit
}

.bootstrap-tagsinput input:focus {
    border: 0;
    box-shadow: none
}

.bootstrap-tagsinput .tag {
    margin-right: .05rem;
    color: #f6f6f6;
    background: #83a1fa;
    padding: .1rem;
    border-radius: .18rem
}

.bootstrap-tagsinput .tag [data-role="remove"] {
    margin-left: 8px;
    cursor: pointer
}

.bootstrap-tagsinput .tag [data-role="remove"]:after {
    content: "x";
    padding: 0 2px
}

.bootstrap-tagsinput .tag [data-role="remove"]:hover {
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
}

.bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125)
}

.ui-helper-hidden-accessible {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px
}

.ui-front {
    z-index: 100
}

.ui-autocomplete {
    position: absolute;
    top: 0;
    left: 0;
    cursor: default
}

.ui-menu {
    list-style: none;
    padding: 0;
    margin: 0;
    display: block;
    outline: 0
}
/* ... */

